# keel

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
crates/keel-cli/: Cargo.toml
crates/keel-cli/src/: main.rs
crates/keel-core/: Cargo.toml
crates/keel-core/src/: error.rs  lib.rs  managed.rs  space.rs  space_fs.rs
crates/keel-enforce/: Cargo.toml
crates/keel-enforce/src/: backend.rs  bwrap.rs  child_net.rs  compose.rs  credentials.rs  deny_glob.rs  egress_proxy.rs  error.rs  lib.rs  local_process.rs  map_caps.rs  null.rs  process_guard.rs  sandbox_child.rs  windows_appcontainer.rs  windows_sandbox.rs  worktree.rs
crates/keel-enforce/tests/: e2e_enforce.rs
crates/keel-policy/: Cargo.toml
crates/keel-policy/src/: baseline.rs  config.rs  egress.rs  error.rs  ids.rs  lib.rs  narrow.rs  net.rs  paths.rs  policy.rs  presets.rs
crates/keel-record/: Cargo.toml
crates/keel-record/src/: chain.rs  event.rs  lib.rs  paths.rs  sink.rs
docs/: design.md  future-remote-microvm.md  integration.md  optimization-plan.md  optimization-review-fable.md  testing.md
examples/: sandbox.toml
examples/policies/: workspace.example.toml
