[workspace]
resolver = "2"
members = [
    "crates/keel-policy",
    "crates/keel-record",
    "crates/keel-enforce",
    "crates/keel-core",
    "crates/keel-cli",
]
default-members = ["crates/keel-cli"]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/EeroEternal/keel"
rust-version = "1.93"

[workspace.dependencies]
keel-policy = { path = "crates/keel-policy" }
keel-record = { path = "crates/keel-record" }
keel-enforce = { path = "crates/keel-enforce" }
keel-core = { path = "crates/keel-core" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
toml = "1"
async-trait = "0.1"
dirs = "6"
dunce = "1"
