[workspace]
resolver = "2"
members = [
    "crates/keel-policy",
    "crates/keel-record",
    "crates/keel-enforce",
    "crates/keel-core",
    "crates/keel-cli",
]
default-members = ["crates/keel-cli"]

[workspace.package]
version = "0.0.14"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/EeroEternal/keel"
homepage = "https://github.com/EeroEternal/keel"
rust-version = "1.93"
authors = ["EeroEternal"]
keywords = ["agent", "sandbox", "execution", "policy", "security"]
categories = ["command-line-utilities", "development-tools", "os"]

[workspace.dependencies]
# crates.io packages: eero-keel-* (owner EeroEternal). Plain keel-* and keel-exec-* are taken/other-owned.
# Rust lib crate names stay keel_* via each crate's [lib] name.
keel-policy = { package = "eero-keel-policy", path = "crates/keel-policy", version = "0.0.14" }
keel-record = { package = "eero-keel-record", path = "crates/keel-record", version = "0.0.14" }
keel-enforce = { package = "eero-keel-enforce", path = "crates/keel-enforce", version = "0.0.14" }
keel-core = { package = "eero-keel-core", path = "crates/keel-core", version = "0.0.14" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util", "net"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
toml = "1"
async-trait = "0.1"
dirs = "6"
dunce = "1"
sha2 = "0.10"
