[package]
name = "keel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Keel CLI — inspect policies and run commands inside an execution space"
rust-version.workspace = true

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
keel-core = { workspace = true }
keel-policy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
