[package]
name = "keel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Keel space lifecycle — Policy + Enforce + Record orchestration"
rust-version.workspace = true

[dependencies]
keel-policy = { workspace = true }
keel-record = { workspace = true }
keel-enforce = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
