[package]
name = "keel-exec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Keel space lifecycle — Policy + Enforce + Record orchestration"
rust-version.workspace = true
documentation = "https://docs.rs/keel-exec-core"

[lib]
name = "keel_core"
path = "src/lib.rs"

[dependencies]
keel-policy = { workspace = true }
keel-record = { workspace = true }
keel-enforce = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
