[package]
name = "keel-exec-enforce"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Enforce backends for Keel — map Policy to real boundaries (Landlock/Seatbelt, worktree, egress)"
rust-version.workspace = true
documentation = "https://docs.rs/keel-exec-enforce"

[lib]
name = "keel_enforce"
path = "src/lib.rs"

[features]
default = ["kernel"]
## Landlock (Linux) / Seatbelt (macOS) via nono. No-op stubs on other platforms.
kernel = []

[dependencies]
keel-policy = { workspace = true }
keel-record = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dunce = { workspace = true }
dirs = { workspace = true }
globset = "0.4"
ignore = "0.4"

[target.'cfg(unix)'.dependencies]
# Pinned: Seatbelt deny/platform-rule behavior can change across nono releases.
# Re-verify LocalProcessBackend e2e after bumping.
# 0.53 matches Grok's pin and supports rustc 1.93; 0.68+ needs rustc 1.95.
nono = { version = "=0.53.0", default-features = false }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
