[package]
name = "keel-record"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution record — what actually happened inside a Keel space"
rust-version.workspace = true

[dependencies]
keel-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
