[package]
name = "eero-keel-record"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Execution record — what actually happened inside a Keel space"
rust-version.workspace = true
documentation = "https://docs.rs/eero-keel-record"

[lib]
name = "keel_record"
path = "src/lib.rs"

[dependencies]
keel-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
